k8s/apps/catalog/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: catalog
  labels:
    name: catalog
