k8s/apps/catalog/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalog
  namespace: catalog
  labels:
    app: catalog
spec:
  selector:
    app: catalog
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  - port: 9090
    targetPort: 9090
    protocol: TCP
    name: grpc
  type: ClusterIP
