k8s/apps/catalog/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: catalog
  namespace: catalog
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: catalog.kubelab.lan
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: catalog
            port:
              number: 80
